<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bluePrimary"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/imgDetailMovie"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:contentDescription="@string/image_detail_movie"
            android:src="@drawable/image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="318dp"
                android:background="@drawable/bg_card_detail"
                android:paddingStart="@dimen/dimens16"
                android:paddingTop="@dimen/dimens25"
                android:paddingEnd="@dimen/dimens16"
                android:paddingBottom="@dimen/dimens16">

                <View
                    android:id="@+id/viewOverview"
                    android:layout_width="5dp"
                    android:layout_height="27dp"
                    android:background="@color/bluePrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtOverviewInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens16"
                    android:text="@string/overview"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/viewOverview"
                    app:layout_constraintStart_toEndOf="@id/viewOverview"
                    app:layout_constraintTop_toTopOf="@id/viewOverview" />

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens16"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/viewOverview"
                    app:layout_constraintTop_toBottomOf="@id/viewOverview"
                    tools:text="@string/text_overview" />

                <View
                    android:id="@+id/viewInformation"
                    android:layout_width="5dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="@dimen/dimens16"
                    android:background="@color/bluePrimary"
                    app:layout_constraintStart_toStartOf="@id/txtOverview"
                    app:layout_constraintTop_toBottomOf="@id/txtOverview" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens16"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/viewInformation"
                    app:layout_constraintStart_toEndOf="@id/viewInformation"
                    app:layout_constraintTop_toTopOf="@id/viewInformation" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens16"
                    app:layout_constraintStart_toStartOf="@id/viewInformation"
                    app:layout_constraintTop_toBottomOf="@id/viewInformation">

                    <!--   Detail Of Release   -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimens8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_release"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txtDateOfRelease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimens8"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:text="@string/date_of_release_tools" />

                    </TableRow>

                    <!--   Ratting   -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimens8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ratting :"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <RatingBar
                            android:id="@+id/rattingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimens8"
                            android:layout_marginEnd="@dimen/dimens16"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="@color/bluePrimary"
                            app:layout_constraintStart_toStartOf="@id/txtTitle"
                            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

                    </TableRow>

                    <!--   Detail Of Release   -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimens8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txtStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimens8"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:text="@string/status_tools" />

                    </TableRow>

                </TableLayout>

                <View
                    android:id="@+id/viewGenre"
                    android:layout_width="5dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="@dimen/dimens16"
                    android:background="@color/bluePrimary"
                    app:layout_constraintStart_toStartOf="@id/tableLayout"
                    app:layout_constraintTop_toBottomOf="@id/tableLayout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens16"
                    android:text="@string/genreList"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/viewGenre"
                    app:layout_constraintStart_toEndOf="@id/viewGenre"
                    app:layout_constraintTop_toTopOf="@id/viewGenre" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/viewGenre"
                    app:layout_constraintTop_toBottomOf="@+id/viewGenre" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/dimens16"
        android:layout_marginBottom="@dimen/dimens16"
        android:contentDescription="@string/favButton"
        android:src="@drawable/ic_baseline_favorite_border_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>